generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_with_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
with (obj4) { prop7; }

AST:
(program
  (with_statement
    (parenthesized_expression
      (identifier obj4)
    )
    (statement_block
      (expression_statement
        (identifier prop7)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
